--- a/css/style.css
+++ b/css/style.css
@@ -74,8 +74,8 @@
 }
 
 #important {
-  font-family: "Larsseit";
-  font-size: 30px;
+  font-family: "Lato";
+  font-size: 20px;
   color: coral;
   font-style: normal;
 }
